Finished rewriting docs

--- a/source/includes/api/auth/_remove.md.erb
+++ b/source/includes/api/auth/_remove.md.erb
@@ -24,7 +24,7 @@ Deletes an `auth` and all its `items` from the account.
 
 ### Arguments
 
-Parameters | Description
+Parameter | Description
 ----- | -----------
 `authId` | ID of bill to delete.
 
