--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -59,11 +59,11 @@ Retrieves the company with the given ID.
 
 ### Arguments
 
-Param | Description
+Parameter | Description
 ----- | -----------
 `companyId` | Unbill company ID or partner company ID.
 
 
 ### Returns
 
-Returns a company object if a valid `companyId` was provided. Returns an error otherwise.
+Returns a [company object](#the-company-object) if a valid `companyId` was provided. Returns an error otherwise.
