--- a/source/includes/api/payment/_assign.md.erb
+++ b/source/includes/api/payment/_assign.md.erb
@@ -1,16 +1,17 @@
 ## Assign payment method
 
-> Sample Request
+> Example Request
 
-```json
-{
-  "apiKey": "<%= config.auth %>",
-  "paymentMethodId": "566595c8ce88ccec69328566",
-  "billId": "579b695decea110719b1874d"
-}
+```shell
+curl "<%= config.host %>/payment/566595c8ce88ccec69328566/assign" \
+  -H "<%= config.auth %>" \
+  -d '{
+    "billId": "566595c8ce88ccec69328566",
+  }'
+  -X PATCH
 ```
 
-> 200 Response
+> Example Response
 
 ```json
 {
@@ -18,27 +19,19 @@
 }
 ```
 
-> 400 Response
-
-```json
-{
-  "message": "No payment method found by that ID."
-}
-```
-
 Assign a linked payment method to pay a specific bill. This is required when a company's `requiredPayment` is defined as `card` or `bank`.
 
 ### HTTP Request
 
-`POST <%= config.host %>/payment/assign`
+`PATCH <%= config.host %>/payment/{paymentMethodId}assign`
 
-### Post Parameters
+### Arguments
 
-Param | Description
+Parameter | Description
 ----- | -----------
-`paymentMethodId` | Payment method ID.
-`billId` | Bill ID to assign.
+`paymentMethodId` | ID of payment method to assign.
+`billId` | ID of bill to assign payment method to.
 
 ### Returns
 
-Returns a `200` status code if the payment method was successfully assigned. Returns an error otherwise.
+Returns an object with a `success` property if the payment method was assigned. Returns an error otherwise.
