--- a/source/includes/api/payment/_list.md.erb
+++ b/source/includes/api/payment/_list.md.erb
@@ -1,15 +1,14 @@
 ## List all payment methods
 
-> Sample Request
+> Example Request
 
-```json
-{
-  "apiKey": "<%= config.auth %>",
-  "clientId": "56e1ddbd1a05319bc198d36f"
-}
+```shell
+curl "<%= config.host %>/payment/list/566595c8ce88ccec69328566" \
+  -H "<%= config.auth %>" \
+  -G
 ```
 
-> 200 Response
+> Example Response
 
 ```json
 {
@@ -42,26 +41,18 @@
 }
 ```
 
-> 400 Response
-
-```json
-{
-  "message": "Oddly enough, we couldn't load your payment info."
-}
-```
-
-Retrieve a list of payment methods on file for a user. When in Sandbox, `type` will be `credit` and `brand` will be `visa`.
+Retrieve a list of payment methods on file for a user.
 
 ### HTTP Request
 
-`POST <%= config.host %>/payment/list`
+`GET <%= config.host %>/payment/list/{clientId}`
 
-### Post Parameters
+### Arguments
 
-Param | Description
+Parameter | Description
 ----- | -----------
-`clientId` | Unbill client ID.
+`clientId` | ID of client to retrieve payment methods for.
 
 ### Returns
 
-A dictionary with a `data` property that contains an array of payment method objects.
+A dictionary with a `data` property that contains an array of [payment method objects](#the-payment-method-object).
