--- a/source/includes/api/payment/_settings.md.erb
+++ b/source/includes/api/payment/_settings.md.erb
@@ -1,48 +1,36 @@
 ## Update payment settings
 
-> Sample Request
+> Example Request
 
-```json
-{
-  "apiKey": "<%= config.auth %>",
-  "billId": "566595c8ce88ccec69328566",
-  "recurring": "enabled",
-  "schedule": "five-days-before"
-}
+```shell
+curl "<%= config.host %>/payment/566595c8ce88ccec69328566/settings" \
+  -H "<%= config.auth %>" \
+  -d '{
+    "billId": "566595c8ce88ccec69328566",
+    "recurring": "enabled",
+    "schedule": "five-days-before"
+  }'
+  -X PATCH
 ```
 
-> 200 Response
-
-```json
-{
-  "success": true
-}
-```
-
-> 400 Response
-
-```json
-{
-  "message": "Recurring payments may not be disabled for this company."
-}
-```
+> Example Response
 
 Update payment settings for a bill.
 
-Some subscription companies, such as Netflix, Hulu, and Spotify require recurring payments to be enabled. If a request to the `/payment/settings` endpoint is made for one of these companies, a `400` status code will be returned and recurring payments will not be disabled.
+Some subscription companies, such as Netflix, Hulu, and Spotify require recurring payments to be enabled. If a request to the `/payment/{paymentMethodId}/settings` endpoint is made for one of these companies, an error will be returned and recurring payments will not be disabled.
 
 ### HTTP Request
 
-`POST <%= config.host %>/payment/settings`
+`PATCH <%= config.host %>/payment/settings`
 
-### Post Parameters
+### Arguments
 
-Param | Description
+Parameter | Description
 ----- | -----------
-`billId` | Unbill bill ID.
+`billId` | ID of bill to update payment settings for.
 `recurring` | Whether recurring payments should be `enabled` or `disabled`.
 `schedule` | The [bill payment schedule](#bill-payment-schedule) for payments
 
 ### Returns
 
-Returns a `200` status code if settings were successfully updated.
+Returns an object with a `success` property if payment settings were successfully updated. Returns an error otherwise.
