--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -61,7 +61,7 @@ Retrieves the company with the given ID.
 
 Parameter | Description
 ----- | -----------
-`companyId` | Unbill company ID or partner company ID.
+`companyId` | ID of company to retrieve.
 
 
 ### Returns
