--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -46,6 +46,9 @@ includes:
   - api/client/index
   - api/client/create
   - api/client/create-token
+  - api/swap/index
+  - api/swap/create
+  - api/swap/companies
 
 search: true
 ---
