--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -34,7 +34,7 @@ To authenticate bills with your users, you may use the following flow.
 ### User Creation
 
 1. User signs up in your app.
-2. Make a request to the `/client/create` endpoint to retrieve an Unbill `clientId` to store in your database for future requests.
+2. Make a request to the `/client` endpoint to retrieve a `clientId` to store in your database for future requests.
 
 ### Authentication
 
@@ -51,7 +51,7 @@ To authenticate bills with your users, you may use the following flow.
 ### Payments
 
 1. Provide your user with a "link payment" view to choose a payment method.
-2. Link this payment method to Unbill using the `/payment` endpoint.
+2. Link this payment method using the `/payment` endpoint.
 3. By default, bills will be paid automatically by using the payment method on file.
-4. To change this, you must make a request to the `/payment/{paymentMethodId}/settings` endpoint to disable recurring payments.
+4. To change this, you must make a request to the `/payment/settings` endpoint to disable recurring payments.
 5. When recurring payments are disabled, in order to make an on-demand payment, one must be scheduled via the `/payment/schedule` endpoint.
