--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -5,9 +5,13 @@
 > API Host
 
 ```
-https://api-sb.unbill.co/v1 (development)
+https://sb.unbill.co/v1 (sandbox)
 <%= config.host %> (production)
 ```
+
+<div class="swagger">
+  <a href="https://sb.unbill.co/documentation", target="_blank">Test with Swagger</a>
+</div>
 
 > Resource URL Patterns
 
@@ -19,7 +23,7 @@ https://api-sb.unbill.co/v1 (development)
 /client
 ```
 
-Welcome! The <%= config.apiName %> allows developers to receive user-authorized bill data and make payments on behalf of a user. With over 5000 companies and counting, supercharge your platform with the <%= config.apiName %>. 
+Welcome! The <%= config.apiName %> allows developers to receive user-authorized bill data and make payments on behalf of a user.
 
 Here you will find information on how to integrate with and use the <%= config.apiName %>. We've tried to make this documentation user-friendly and example-filled, but please [drop us a line](mailto:api@unbill.us) with any questions. If you're planning to use our API in production, you should take a look at our [privacy policy](http://unbill.us/privacy.html).
 
