--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -11,6 +11,10 @@ curl "<%= config.host %>/client/create-token" \
     "meta": {
       "firstName": "Sean",
       "lastName": "Hill",
+      "address1": "123 Api St.",
+      "address2": "P.O. Box 283",
+      "city": "Mesa",
+      "state": "AZ",
       "zipcode": "12345"
     }
   }'
