--- a/source/includes/api/client/_create.md.erb
+++ b/source/includes/api/client/_create.md.erb
@@ -3,10 +3,19 @@
 > Example Request
 
 ```shell
-curl "<%= config.host %>/client/create" \
+curl "<%= config.host %>/client" \
   -H "<%= config.auth %>" \
   -d '{
-    "identifier": "Bk0zwVx1Z"
+    "identifier": "Bk0zwVx1Z",
+    "meta": {
+      "firstName": "Sean",
+      "lastName": "Hill",
+      "address1": "123 Api St.",
+      "address2": "P.O. Box 283",
+      "city": "Mesa",
+      "state": "AZ",
+      "zipcode": "12345"
+    }
   }'
 ```
 
@@ -22,13 +31,14 @@ Creates or returns an existing client to be used with requests.
 
 ### HTTP Request
 
-`POST <%= config.host %>/client/create`
+`POST <%= config.host %>/client`
 
 ### Arguments
 
 Parameter | Description
 --------- | -----------
 `identifier` | A unique identifier that represents a user in your system.
+`meta` | Additional information about the user in your system.
 
 ### Returns
 
