--- a/source/includes/api/payment/_retry.md.erb
+++ b/source/includes/api/payment/_retry.md.erb
@@ -5,7 +5,7 @@
 ```shell
 curl "<%= config.host %>/payment/566595c8ce88ccec69328566/retry" \
   -H "<%= config.auth %>" \
-  -X PATCH
+  -X POST
 ```
 
 > Example Response
@@ -20,7 +20,7 @@ Retry a `declined` payment method on file for bill payments.
 
 ### HTTP Request
 
-`PATCH <%= config.host %>/payment/{paymentMethodId}/retry`
+`POST <%= config.host %>/payment/{paymentMethodId}/retry`
 
 ### Arguments
 
