--- a/source/includes/api/payment/_set-default.md.erb
+++ b/source/includes/api/payment/_set-default.md.erb
@@ -5,7 +5,7 @@
 ```shell
 curl "<%= config.host %>/payment/566595c8ce88ccec69328566/set-default" \
   -H "<%= config.auth %>" \
-  -X PATCH
+  -X POST
 ```
 
 > Example Response
@@ -20,7 +20,7 @@ Set a payment method as the `default` for bill payments.
 
 ### HTTP Request
 
-`PATCH <%= config.host %>/payment/{paymentMethodId}/set-default`
+`POST <%= config.host %>/payment/{paymentMethodId}/set-default`
 
 ### Arguments
 
