--- a/source/includes/api/payment/_settings.md.erb
+++ b/source/includes/api/payment/_settings.md.erb
@@ -3,25 +3,25 @@
 > Example Request
 
 ```shell
-curl "<%= config.host %>/payment/566595c8ce88ccec69328566/settings" \
+curl "<%= config.host %>/payment/settings" \
   -H "<%= config.auth %>" \
   -d '{
     "billId": "566595c8ce88ccec69328566",
     "recurring": "enabled",
     "schedule": "five-days-before"
   }'
-  -X PATCH
+  -X POST
 ```
 
 > Example Response
 
 Update payment settings for a bill.
 
-Some subscription companies, such as Netflix, Hulu, and Spotify require recurring payments to be enabled. If a request to the `/payment/{paymentMethodId}/settings` endpoint is made for one of these companies, an error will be returned and recurring payments will not be disabled.
+Some subscription companies, such as Netflix, Hulu, and Spotify require recurring payments to be enabled. If a request to the `/payment/settings` endpoint is made for one of these companies, an error will be returned and recurring payments will not be disabled.
 
 ### HTTP Request
 
-`PATCH <%= config.host %>/payment/settings`
+`POST <%= config.host %>/payment/settings`
 
 ### Arguments
 
