Add required application/json header

--- a/source/includes/api/auth/_auth-step.md.erb
+++ b/source/includes/api/auth/_auth-step.md.erb
@@ -5,6 +5,7 @@
 ```shell
 curl "<%= config.host %>/auth" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "mfa": [{
       "answer": "Secret Answer",
@@ -19,6 +20,7 @@ curl "<%= config.host %>/auth" \
 ```shell
 curl "<%= config.host %>/auth" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "mfa": { 
       "identifier": "ByDXD4eJW" 
