--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -5,6 +5,7 @@
 ```shell
 curl "<%= config.host %>/client/create-token" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "identifier": "Bk0zwVx1Z",
     "nonce": false,
