--- a/source/includes/api/payment/_add.md.erb
+++ b/source/includes/api/payment/_add.md.erb
@@ -5,6 +5,7 @@
 ```shell
 curl "<%= config.host %>/auth" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "clientId": "56e1ddbd1a05319bc198d36f",
     "paymentType": "card",
@@ -23,6 +24,7 @@ curl "<%= config.host %>/auth" \
 ```shell
 curl "<%= config.host %>/auth" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "clientId": "56e1ddbd1a05319bc198d36f",
     "paymentType": "bank",
