--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -5,6 +5,7 @@
 ```shell
 curl "<%= config.host %>/auth" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "clientId": "566595c8ce88ccec69328566",
     "companyId": "56e1dbb5443b10a3bd403fcf",
