--- a/source/includes/api/payment/_schedule.md.erb
+++ b/source/includes/api/payment/_schedule.md.erb
@@ -5,6 +5,7 @@
 ```shell
 curl "<%= config.host %>/payment/schedule" \
   -H "<%= config.auth %>" \
+  -H "Content-Type: application/json" \
   -d '{
     "billId": "566595c8ce88ccec69328566",
     "payDate": "<%= config.futureDate %>"
