--- a/source/includes/api/payment/_list.md.erb
+++ b/source/includes/api/payment/_list.md.erb
@@ -41,7 +41,7 @@ curl "<%= config.host %>/payment/list/566595c8ce88ccec69328566" \
 }
 ```
 
-Retrieve a list of payment methods on file for a user.
+Retrieve a list of payment methods on file for a client.
 
 ### HTTP Request
 
