--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -39,16 +39,25 @@ includes:
   - api/payment/list
   - api/payment/delete
   - api/payment/retry
-  - api/payment/set-default
+  # - api/payment/set-default
   - api/payment/assign
   - api/payment/settings
   - api/payment/schedule
   - api/client/index
   - api/client/create
   - api/client/create-token
+  # - api/client/notification-methods
+  # - api/client/notification-method-object
+  # - api/client/notification-verification
+  # - api/client/request-code
+  # - api/client/verify-code
+  # - api/client/list-notification-methods
   - api/swap/index
   - api/swap/create
   - api/swap/companies
+  - events/index
+  - events/object
+  - events/types
 
 search: true
 ---
