--- a/source/includes/api/client/_create.md.erb
+++ b/source/includes/api/client/_create.md.erb
@@ -10,6 +10,8 @@ curl "<%= config.host %>/client" \
     "meta": {
       "firstName": "Sean",
       "lastName": "Hill",
+      "email": "sean@hill.com",
+      "phone": "4801428531",
       "address1": "123 Api St.",
       "address2": "P.O. Box 283",
       "city": "Mesa",
