--- a/source/includes/api/auth/_auth.md.erb
+++ b/source/includes/api/auth/_auth.md.erb
@@ -17,44 +17,11 @@ curl "<%= config.host %>/auth" \
   }'
 ```
 
-> Example 200 Response (Authenticated)
+> Example 200 Response
 
 ```json
 {
-  "authId": "56e1dbb5443b10a3bd403fcf",
-  "items": [{
-    "_id": "56e1dbb5443b10a3bd403fcf",
-    "type": "bill",
-    "balance": "100",
-    "dueDate": "<%= config.futureDate %>"
-  }]
-}
-```
-
-> Example 201 Response (Question Based MFA)
-
-```json
-{
-  "token": "566595c8ce88ccec69328566",
-  "method": "questions",
-  "mfa": [{ 
-    "question": "What is the name of your first pet?",
-    "identifier": "Bk0zwVx1Z"
-  }]
-}
-```
-
-> Example 201 Response (Code Based MFA)
-
-```json
-{
-  "token": "566595c8ce88ccec69328566",
-  "method": "code",
-  "mfa": [
-  	{ "mask": "t...t@example.com", "type": "email", "identifier": "r1g0mvVg1Z", "label": "Email: t...t@example.com" },
-    { "mask": "xxx-xxx-1234", "type": "phone", "identifier": "B1gyVvElJZ", "label": "Phone: xxx-xxx-1234" },
-    { "mask": "xxx-xxx-1234", "type": "text", "identifier": "SkbkEP4ekW", "label": "Text: xxx-xxx-1234" }
-  ]
+  "success": true
 }
 ```
 
@@ -74,4 +41,4 @@ Parameter | Description
 
 ### Returns
 
-Returns a list of available `items` linked to an `auth`, or the MFA to be submitted to the `/auth/step` endpoint.
+Returns an object with a `success` property if the auth request was created. Returns an error otherwise.
