--- a/source/includes/events/_auth.invalid.md.erb
+++ b/source/includes/events/_auth.invalid.md.erb
@@ -22,7 +22,7 @@
 }
 ```
 
-When the credentials no longer work with the company's website and need to be reauthenticated.
+When the auth's credentials are no longer valid and need to be reauthenticated.
 
 Attribute | Description
 --------- | -----------
