--- a/source/includes/events/_auth.mfa.md.erb
+++ b/source/includes/events/_auth.mfa.md.erb
@@ -57,7 +57,7 @@
 }
 ```
 
-When additional security responses are to be sent to the `/auth/step` endpoint.
+When additional authentication steps are required. Responses will be sent to the `/auth/step` endpoint.
 
 Attribute | Description
 --------- | -----------
