--- a/source/includes/events/_bill.created.md.erb
+++ b/source/includes/events/_bill.created.md.erb
@@ -16,7 +16,7 @@
 }
 ```
 
-When a bill is created.
+When a bill is found on an associated auth.
 
 Attribute | Description
 --------- | -----------
