--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -58,7 +58,7 @@ includes:
   - events/index
   - events/object
   - events/types
-  - events/auth.created
+  # - events/auth.created
   - events/auth.success
   - events/auth.mfa
   - events/auth.failed
