--- a/source/includes/events/_auth.hold.md.erb
+++ b/source/includes/events/_auth.hold.md.erb
@@ -25,7 +25,7 @@
 }
 ```
 
-When an authentication receives a hold that prevents access to the account.
+When an auth receives a hold that prevents access to the account data.
 
 Attribute | Description
 --------- | -----------
