--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -5,13 +5,9 @@
 > API Host
 
 ```
-https://sb.unbill.co/v1 (sandbox)
 <%= config.host %> (production)
+https://sb.unbill.co/v1 (sandbox)
 ```
-
-<div class="swagger">
-  <a href="https://sb.unbill.co/documentation", target="_blank">Test with Swagger</a>
-</div>
 
 > Resource URL Patterns
 
@@ -30,6 +26,23 @@ Here you will find information on how to integrate with and use the <%= config.a
 The <%= config.apiName %> uses standard HTTP [verbs](http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html) to communicate and HTTP [response codes](http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html) to indicate status and errors. All responses come in standard [JSON](http://www.json.org/). The <%= config.apiName %> is served over HTTPS to ensure data privacy, HTTP is not supported.
 
 ![Overview](<%= config.s3 %>/unbill.png)
+
+## Testing
+
+To quickly experiment with the API, you can use Postman. You'll need to set the `apiHost` and `apiKey` environment variables.
+
+<div class="postman">
+  <div class="postman-run-button" data-postman-action="collection/import" data-postman-var-1="e238fb8aba0a35436dd3"></div>
+</div>
+<script type="text/javascript">
+  (function (p,o,s,t,m,a,n) {
+    !p[s] && (p[s] = function () { (p[t] || (p[t] = [])).push(arguments); });
+    !o.getElementById(s+t) && o.getElementsByTagName("head")[0].appendChild((
+      (n = o.createElement("script")),
+      (n.id = s+t), (n.async = 1), (n.src = m), n
+    ));
+  }(window, document, "_pm", "PostmanRunObject", "https://run.pstmn.io/button.js"));
+</script>
 
 ## Gaining Access
 
