Added failed payment event

--- a/source/includes/api/auth/_list.md.erb
+++ b/source/includes/api/auth/_list.md.erb
@@ -45,7 +45,7 @@ curl "<%= config.host %>/auth/list/566595c8ce88ccec69328566" \
 }
 ```
 
-Retrieves a list of user's auths.
+Retrieves a list of client's auths.
 
 ### HTTP Request
 
