--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -67,6 +67,7 @@ includes:
   - events/bill.created
   - events/bill.update
   - events/bill.payment.sent
+  - events/bill.payment.failed
 
 search: true
 ---
