--- a/source/includes/api/auth/_auth.md.erb
+++ b/source/includes/api/auth/_auth.md.erb
@@ -1,6 +1,6 @@
 ## Add an auth
 
-Authenticate a user's credentials. This process may take up to 30 seconds, but could extend if additional verification is required. The authentication process is event driven. The following [events](#event) may be emitted during an authentication: [auth.success](#auth-success), [auth.mfa-required](#auth-mfa-required), and [auth.failed](#auth-failed).
+Authenticate a client's credentials. This process may take up to 30 seconds, but could extend if additional verification is required. The authentication process is event driven. The following [events](#event) may be emitted during an authentication: [auth.success](#auth-success), [auth.mfa-required](#auth-mfa-required), and [auth.failed](#auth-failed).
 
 > Example Request
 
