--- a/source/includes/events/_bill.payment.failed.md.erb
+++ b/source/includes/events/_bill.payment.failed.md.erb
@@ -30,4 +30,4 @@ Attribute | Description
 --------- | -----------
 `type` | `bill.payment.failed`
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
-`payload.data.amount` | The amount attempted to be sent to the company.
+`payload.data.amount` | The amount of the unsuccesful payment.
