--- a/source/includes/api/company/_get.md.erb
+++ b/source/includes/api/company/_get.md.erb
@@ -14,6 +14,7 @@ curl "<%= config.host %>/company/566595c8ce88ccec69328566" \
 {
   "_id": "579b695decea110719b1874d",
   "name": "Netflix",
+  "status": "operational",
   "logo": {
     "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
     "background": false,
