--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -6,6 +6,7 @@
 {
   "_id": "579b695decea110719b1874d",
   "name": "Netflix",
+  "status": "operational",
   "logo": {
     "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
     "background": false,
