Remove falsy oauth protocal

--- a/source/includes/_authentication.md.erb
+++ b/source/includes/_authentication.md.erb
@@ -9,4 +9,4 @@
 
 Authenticate your account when using the API by including your secret API key in the request. Your API keys carry many privileges, so be sure to keep them secret! Do not share your secret API keys in publicly accessible areas such as GitHub, client-side code, and so forth.
 
-Authentication to the API is performed via the [OAuth2 Protocol](https://oauth.net/2/). Pass your API Key as a bearer token in the `Authorization` header.
+Authentication to the API is performed via bearer tokens. Pass your API Key as a bearer token in the `Authorization` header.
