--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -28,7 +28,7 @@ To authenticate bills with your users, you may use the following flow.
 1. Search for the company you'd like to add from the `/company/search` endpoint.
 2. Provide your user with a "bill authentication" view populated with the login fields retrieved from the desired company.
 3. Have your user fill out their credentials, and then send those credentials to the `/auth` endpoint.
-4. <%= config.brand %> will begin the authentication process and response with [events](#event).
+4. <%= config.brand %> will begin the authentication process and respond with [events](#event).
 
 ### Bills
 
