Added products piece

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -7,6 +7,10 @@ includes:
   - errors
   - request-id
   - getting-started
+  - products/integration
+  - products/connect
+  - products/cardswap
+  - products/biller-direct
 #  - resources
   - api/auth/index
   - api/auth/object
