--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -3,3 +3,5 @@
 ![CardSwap](https://www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif)
 
 Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.
+
+[View demo](https://cardswap.unbill.us)
