--- a/source/includes/products/biller-direct.md.erb
+++ b/source/includes/products/biller-direct.md.erb
@@ -2,4 +2,6 @@
 
 ![Biller Direct](https://www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif)
 
-Biller Direct is a new, card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.
+Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.
+
+[View demo](https://biller-direct.unbill.us)
