--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -5,3 +5,5 @@
 Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the <%= config.apiName %> supports. Connect makes it secure and easy for clients to link their accounts, while doing the heavy lifting for the authentication.
 
 Connect will emit events back to your app when a client successfully authenticates, exits, or times out.
+
+[View demo](https://connect.unbill.us)
