--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -72,6 +72,7 @@ includes:
   - events/bill.update
   - events/bill.payment.sent
   - events/bill.payment.failed
+  - events/swap.success
 
 search: true
 ---
