testing out deployment

--- a/source/includes/events/_auth.created.md.erb
+++ b/source/includes/events/_auth.created.md.erb
@@ -31,7 +31,7 @@
 }
 ```
 
-When an auth is created.
+When an auth is created, this event is raised.
 
 Attribute | Description
 --------- | -----------
