Added swap list docs

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -57,8 +57,11 @@ includes:
   # - api/client/verify-code
   # - api/client/list-notification-methods
   - api/swap/index
+  - api/swap/object
+  - api/swap/status
   - api/swap/create
   - api/swap/companies
+  - api/swap/list
   - events/index
   - events/object
   - events/types
