Updated API docs

--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -42,3 +42,4 @@ To authenticate bills with your users, you may use the following flow.
 3. By default, bills will be paid automatically by using the payment method on file.
 4. To change this, you must make a request to the `/payment/settings` endpoint to disable recurring payments.
 5. When recurring payments are disabled, in order to make an on-demand payment, one must be scheduled via the `/payment/schedule` endpoint.
+6. You can cancel a scheduled payment for a bill by using the `/payment/cancel` endpoint.
