--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -21,6 +21,7 @@ includes:
   - api/auth/status
   - api/auth/list
   - api/auth/fix-hold
+  - api/auth/answer-questions
   - api/auth/remove
   - api/bill/index
   - api/bill/object
@@ -47,6 +48,7 @@ includes:
   - api/payment/assign
   - api/payment/settings
   - api/payment/schedule
+  - api/payment/cancel
   - api/client/index
   - api/client/create
   - api/client/create-token
