--- a/source/includes/api/payment/_cancel.md.erb
+++ b/source/includes/api/payment/_cancel.md.erb
@@ -1,4 +1,4 @@
-## Cancel scheduled payment 
+## Cancel payment 
 
 > Example Request
 
@@ -13,7 +13,6 @@ curl "<%= config.host %>/payment/cancel" \
 
 ```json
 {
-  "apiKey": "<%= config.auth %>",
   "billId": "566595c8ce88ccec69328566",
 }
 ```
@@ -40,4 +39,4 @@ Parameter | Description
 
 ### Returns
 
-Returns an object with a `success` property if a payment was canceled. Returns an error otherwise.
+Returns an object with a `success` property if the payment was canceled. Returns an error otherwise.
