made requested changes

--- a/source/includes/api/auth/_answer-questions.md.erb
+++ b/source/includes/api/auth/_answer-questions.md.erb
@@ -18,7 +18,7 @@ curl "<%= config.host %>/auth/{authId}/answer-questions" \
   }'
 ```
 
-Accepts a list of answers to the questions presented when an auth has the mfa-required status.
+Accepts a list of answers to the questions presented when an auth has the `mfa-required` status.
 
 
 ### HTTP Request
